# G-SLIDE

./: .gitignore  CMakeLists.txt  CompactActNodes.cu  CompactActNodes.h  CompactLabels.cu  CompactLabels.h  CscActNodes.cu  GPUMultiLinkedHashTable.cu  GPUMultiLinkedHashTable.h  GPUTimer.cu  GPUTimer.h  LICENSE  LSH.cu  LSH.h  Layer.cu  Layer.h  Makefile  Network.cu  Network.h  ReluLayer.cu  ReluLayer.h  SoftmaxLayer.cu  SoftmaxLayer.h  amazon.json  delicious.json  kernel.cu  kernel.h  lshKnl.cu  lshKnl.h  main.cu  main.cu.back  readme.md  run.sh  utils.h  wikiLSHTC.json
data/: amazon_partial_test.txt
include/: CscActNodes.h  GPUMultiLinkedHashTable.h  GPUTimer.h  LSH.h  Layer.h  SoftmaxLayer.h  kernel.h  utils.h
src/: CscActNodes.cu  GPUMultiLinkedHashTable.cu  LSH.cu  Layer.cu  Network.cu  ReluLayer.cu  SoftmaxLayer.cu  kernel.cu  main.cpp  main.cu
